fix issues in responsive for post pages
- change opacity of side images when overlap with the text

--- a/static/core/css/base.css
+++ b/static/core/css/base.css
@@ -23,6 +23,7 @@ header .navbar {
     border-bottom: 1px solid #2b2b2b;
     padding-bottom: 12px;
     padding-top: 8px;
+    margin-bottom: 0;
 }
 
 header .container .nav-item .nav-link {
